--- a/gpt_testing/model_reader_training.ipynb
+++ b/gpt_testing/model_reader_training.ipynb
@@ -2430,11 +2430,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming the model class is defined elsewhere\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
     "class SequencePredictionModel(nn.Module):\n",
     "    def __init__(self, input_size, hidden_size, output_size):\n",
     "        super(SequencePredictionModel, self).__init__()\n",
@@ -2446,21 +2448,23 @@
     "        pass\n",
     "\n",
     "    def generate(self, context, max_new_tokens):\n",
-    "        \"\"\"\n",
-    "        Generate new tokens based on the context provided.\n",
-    "\n",
-    "        Args:\n",
-    "            context (Tensor): Initial context tensor with shape (batch_size, sequence_length, input_size).\n",
-    "            max_new_tokens (int): Number of new tokens to generate.\n",
-    "\n",
-    "        Returns:\n",
-    "            Tensor: Generated tokens.\n",
-    "        \"\"\"\n",
     "        generated = context.float()  # Convert context to float32\n",
+    "\n",
+    "        # Debugging print: Checking the shape of the context tensor at the start\n",
+    "        print(f\"Initial context shape: {generated.shape}\")\n",
     "        \n",
-    "        # Expand context to match input size (9 features)\n",
-    "        generated = generated.expand(-1, -1, 9)  # Add 9 features to the last dimension\n",
-    "        \n",
+    "        # Ensure that context has 3 dimensions, (batch_size, sequence_length, input_size)\n",
+    "        if generated.dim() == 2:  # If context is 2D, add a dummy feature dimension\n",
+    "            generated = generated.unsqueeze(-1)  # (batch_size, sequence_length, 1)\n",
+    "            print(f\"After unsqueeze: {generated.shape}\")  # Debugging\n",
+    "\n",
+    "        # Now, check if the context has the right number of features (9), and expand if necessary\n",
+    "        if generated.size(-1) != 9:\n",
+    "            print(f\"Before expand: {generated.shape}\")  # Debugging\n",
+    "            generated = generated.expand(-1, -1, 9)  # Expand to match 9 features\n",
+    "            print(f\"After expand: {generated.shape}\")  # Debugging\n",
+    "\n",
+    "        # Now we are ready to generate new tokens\n",
     "        for _ in range(max_new_tokens):\n",
     "            # Forward pass through the LSTM\n",
     "            lstm_out, _ = self.lstm(generated)\n",
@@ -2470,34 +2474,44 @@
     "            next_token = output.argmax(dim=-1)  # Choose the token with the highest probability\n",
     "            \n",
     "            # Append the generated token to the context for the next step\n",
-    "            # Convert next_token to float32 and expand to match the input size\n",
-    "            next_token_expanded = next_token.unsqueeze(0).unsqueeze(-1).float()\n",
-    "            generated = torch.cat((generated, next_token_expanded.expand(-1, -1, 9)), dim=1)  # Expand to 9 features\n",
-    "        \n",
-    "        return generated\n"
+    "            next_token_expanded = next_token.unsqueeze(0).unsqueeze(-1).float()  # Convert to float32 and add necessary dimensions\n",
+    "            generated = torch.cat((generated, next_token_expanded.expand(-1, -1, 9)), dim=1)  # Add the new token to context\n",
+    "\n",
+    "        return generated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'SequencePredictionModel' object has no attribute 'generate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m context \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m), dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mlong, device\u001b[38;5;241m=\u001b[39mdevice)\n\u001b[0;32m----> 2\u001b[0m generated_chars \u001b[38;5;241m=\u001b[39m decode(\u001b[43mbest_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate\u001b[49m(context, max_new_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(generated_chars)\n",
-      "File \u001b[0;32m~/gpt_module/gpt_animatronic/gpt_testing/gpt_venv/lib/python3.9/site-packages/torch/nn/modules/module.py:1928\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1926\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m modules:\n\u001b[1;32m   1927\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1928\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m   1929\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1930\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SequencePredictionModel' object has no attribute 'generate'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\n"
      ]
     }
    ],
    "source": [
-    "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
-    "generated_chars = decode(best_model.generate(context, max_new_tokens=500)[0].tolist())\n",
+    "# Ensure both model and input tensor are on the same device\n",
+    "context = torch.randn((1, 1, 9), dtype=torch.float32, device=device)\n",
+    "\n",
+    "# Ensure the model is on the same device\n",
+    "best_model.to(device)\n",
+    "\n",
+    "# Generate the output from the model\n",
+    "generated_output = best_model.generate(context, max_new_tokens=500)\n",
+    "\n",
+    "# Flatten the output and ensure it's a list of indices by using argmax\n",
+    "generated_tokens = generated_output[0].flatten().argmax(dim=-1).tolist()\n",
+    "\n",
+    "# Make sure generated_tokens is a list\n",
+    "if not isinstance(generated_tokens, list):\n",
+    "    generated_tokens = [generated_tokens]\n",
+    "\n",
+    "# Decode the generated tokens\n",
+    "generated_chars = decode(generated_tokens)\n",
     "print(generated_chars)"
    ]
   },
